# rholang-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  Makefile  README.md  docker-compose.yml  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: js-bindings.yaml
.run/: Run shell.run.xml  Tests in 'tests'.run.xml  devcontainer.run.xml
crypto/: Cargo.toml
crypto/src/rust/: public_key.rs
docs/: BYTECODE.md  NIGHTLY_TOOLCHAIN.md  ROADMAP.md
models/: Cargo.toml
rholang/: Cargo.toml
rholang-fake/: Cargo.toml
rholang-fake/src/: errors.rs  lib.rs  parser.rs  result.rs
rholang-fake/tests/: errors_test.rs  process_examples_test.rs
rholang-fake/tree-sitter/: Cargo.toml  grammar.js
rholang-fake/tree-sitter/bindings/rust/: build.rs  lib.rs
rholang-jetbrains-plugin/: .gitignore  IMPLEMENTATION.md  README.md  USING_THE_PLUGIN.md  build.gradle  check-quality.sh  download-gradle-wrapper.sh  gradle.properties  gradlew  settings.gradle
rholang-jetbrains-plugin/config/checkstyle/: checkstyle.xml
rholang-jetbrains-plugin/config/pmd/: ruleset.xml
rholang-jetbrains-plugin/examples/: calculator.rho  hello.rho
rholang-jetbrains-plugin/gradle/wrapper/: README.md
rholang-jetbrains-plugin/src/main/java/org/rholang/lang/: RholangFileType.java  RholangIcons.java  RholangLanguage.java
rholang-jetbrains-plugin/src/main/java/org/rholang/lang/highlighting/: RholangColorSettingsPage.java  RholangSyntaxHighlighter.java  RholangSyntaxHighlighterFactory.java
rholang-jetbrains-plugin/src/main/java/org/rholang/lang/lexer/: RholangLexer.java
rholang-jetbrains-plugin/src/main/java/org/rholang/lang/parser/: RholangParser.java  RholangParserCli.java  (+3 more)
rholang-jetbrains-plugin/src/test/java/org/rholang/lang/: RholangFileTypeTest.java  RholangLanguageTest.java
rholang-jni-bridge/: Cargo.toml  README.md
rholang-jni-bridge/src/: j4rs_bridge.rs  jni_bridge.rs  lib.rs
rholang-parser/: Cargo.toml  README.md
rholang-parser-cli/: Cargo.toml
rholang-parser-cli/src/: main.rs
rholang-parser/benches/: parsing.rs
rholang-parser/examples/: basic_parsing.rs  parse_corpus.rs
rholang-parser/rholang-parser/: README.md
rholang-parser/src/: ast.rs  errors.rs  j4rs_bridge.rs  jni_bridge.rs  lib.rs
rholang-parser/src/parser/: ast_builder.rs  errors.rs  mod.rs  parsing.rs
rholang-parser/tests/: corpus_tests.rs  errors_tests.rs  golden.rs  parser_tests.rs
rholang-parser/tests/corpus/: Cell1.rho  bank_contract.rho  coat_check.rho  dining_philosophers.rho  for_patterns.rho  iteration.rho  loopback.rho  sending_receiving_multiple.rho  treasury.rho
rholang-parser/tests/corpus/golden_snapshots/: golden__1.know_ones_revaddress.snap  golden__2.check_balance.snap  golden__3.transfer_funds.snap  golden__Cell1.snap  golden__Cell3.snap  golden__Cell3_bad.snap  golden__ListProcTest.snap  golden__MethodTest.snap  golden__bank_contract.snap  golden__block-data.snap  golden__bond.snap  golden__coat_check.snap  golden__dining_philosophers.snap  golden__dupe.snap  golden__fileinteract.snap  golden__filestore.snap  golden__for_patterns.snap  golden__fuseMap.snap  golden__fuseRead.snap  golden__fuseWrite.snap  golden__hello_world_again.snap  golden__iteration.snap  golden__longfast.snap  golden__longslow.snap  golden__loopback.snap  golden__sending_receiving_multiple.snap  golden__shortfast.snap  golden__shortslow.snap  golden__simpleInsertCall.snap  golden__simpleInsertTest.snap  golden__simpleLookupTest.snap  golden__stderr.snap  golden__stderrAck.snap  golden__stdout.snap  golden__stdoutAck.snap  golden__treasury.snap  golden__tut-bytearray-methods.snap  golden__tut-hash-functions.snap  golden__tut-hello-again.snap  golden__tut-hello.snap  (+12 more)
rholang-tree-sitter/: Cargo.toml  grammar.js  package.json  tree-sitter.json
rholang-tree-sitter-proc-macro/: Cargo.toml  README.md
rholang-tree-sitter-proc-macro/examples/: advanced_usage.rs  match_node_example.rs  parse_rholang.rs
rholang-tree-sitter-proc-macro/scripts/: check_code_quality.sh  fix_code_quality.sh  run_tests.sh
rholang-tree-sitter-proc-macro/src/: lib.rs
rholang-tree-sitter-proc-macro/tests/: macros.rs
rholang-tree-sitter/bindings/js/: .npmrc  package.json  tsconfig.lib.json  tsconfig.node.json  vite.config.ts
rholang-tree-sitter/bindings/js/src/: index.ts
rholang-tree-sitter/bindings/rust/: lib.rs
rholang-tree-sitter/src/: grammar.json  node-types.json  parser.c
rholang-tree-sitter/test/corpus/: attenuation.txt  bank_contract.txt  block-data.rho  bundles.txt  coat_check.txt  collections.txt  contracts.txt  dining_philosophers.txt  dupe.rho  eval.txt  fileinteract.rho  filestore.rho  for_comprehensions.txt  for_patterns.txt  fuseMap.rho  fuseRead.rho  fuseWrite.rho  hashing.txt  if.txt  iteration.txt  junctions.txt  longfast.rho  longslow.rho  loopback.rho  map.txt  match_patterns.txt  matches.txt  mutable_state.txt  names.txt  negation.txt  pattern_matching.txt  pattern_var_ref.txt  pos.txt  registry.txt  replicated_send.txt  select.txt  sending_receiving.txt  sending_receiving_multiple.txt  sequential_send.txt  shortfast.rho  (+20 more)
rholang/src/main/tree_sitter/: Cargo.toml
rspace++/: Cargo.toml
scripts/: check_code_quality.sh  check_proc_macro.sh  check_src_coverage.sh  common.sh  fix_code_quality.sh  run-in-container.sh  run_all_examples.sh  run_all_tests.sh  simplified_check.sh
shell/: Cargo.toml
shell/examples/: process_examples.rs
shell/src/: interpreter.rs  lib.rs  main.rs  main_sync.rs  multiline_helper.rs  providers.rs  rh_interpreter.rs
shell/tests/: args_tests.rs  example_test.rs  fake_interpreter_tests.rs  help_message_tests.rs  interpreter_tests.rs  lib_test.rs  lib_tests.rs  main_function_tests.rs  main_integration_tests.rs  main_test.rs  main_tests.rs  mock_interpreter.rs  mod.rs  multiline_tests.rs  process_examples_test.rs  providers_error_tests.rs  providers_test.rs  readline_events_tests.rs  rholang_parser_interpreter_tests.rs  shell_integration_tests.rs  special_commands_tests.rs
(+4 files in other folders)
