[workspace]
resolver = "3"
members = [
    "shell",
    "rholang-tree-sitter"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "full"] }
rustyline-async = "0.4.6"
rustyline = "0.12.0"
rstest = "0.25.0"
clap = { version = "4.5.40", features = ["derive"] }
async-std = { version = "1.13.1", features = ["attributes"] }

[profile.dev]
debug = true
