[workspace]
resolver = "3"
members = [
    "shell",
    "rholang-tree-sitter",
    "rholang-parser",
    "rholang-jni-bridge"
]

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "full"] }
rustyline-async = "0.4.6"
rustyline = "*"
rstest = "0.25.0"
clap = { version = "4.5.40", features = ["derive"] }
async-std = { version = "1.13.1", features = ["attributes"] }
bracket-parser = "0.1.0"
cc = "1.2.26"
tree-sitter = "0.25.6"
tree-sitter-language = "0.1.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

[profile.dev]
debug = true
