[workspace]
resolver = "3"
members = [
    "rholang-tree-sitter",
    "rholang-parser",
    "rholang-tree-sitter-proc-macro"
]

[workspace.dependencies]
# Used by: shell, rholang-parser, rholang-jni-bridge
anyhow = "1.0.98"

# Used by: shell
async-trait = "0.1.88"

# General purpose, used mostly by rholang-parser
bitvec = "1.0.1"

# Used by: shell
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "full"] }

# Used by: shell
rustyline-async = "0.4.6"

# Used by: shell, rholang-parser
rstest = "0.25.0"

# Used by: shell
clap = { version = "4.5.40", features = ["derive"] }

# Used by: shell
async-std = { version = "1.13.1", features = ["attributes"] }

# Used by: shell
bracket-parser = "0.1.0"

# Library for benchmarking
divan = "0.1.21"

# Used by: rholang-parser
smallvec = { version = "1.15.1", features = ["union", "const_generics", "const_new", "may_dangle"] }

# Used by: rholang-parser, rholang-tree-sitter
tree-sitter = "0.25.8"

# Used by: rholang-tree-sitter
tree-sitter-language = "0.1.5"

# Used by: rholang-parser
validated = "1.0.0"

# Used by: rholang-parser, rholang-jni-bridge
serde = { version = "1.0.188", features = ["derive"] }

# Used by: rholang-parser, rholang-jni-bridge
serde_json = "1.0.107"

# Used by: rholang-jni-bridge
jni = "0.21.1"

# Used by: rholang-tree-sitter-proc-macro
quote = "1.0.36"
syn = "2.0.58"

# Used by: rholang-tree-sitter-proc-macro examples
is-terminal = "0.4.12"

[profile.dev]
debug = true

[profile.bench]
debug = "line-tables-only"
