[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = {workspace = true}
rand = {workspace = true}
sha2 = {workspace = true}
tiny-keccak = {workspace = true}
