[package]
name = "models"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { workspace = true }
hex = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
