[package]
name = "rholang-jni-bridge"
version = "0.1.2"
edition = "2021"

[lib]
name = "rholang_jni_bridge"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
jni = { workspace = true }
rholang-parser = { path = "../rholang-parser" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
