[package]
name = "rholang-parser"
version = "0.1.2"
edition = "2021"

[lib]
name = "rholang_parser"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
tree-sitter = { workspace = true }
rholang-tree-sitter = { path = "../rholang-tree-sitter" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
