[package]
name = "rholang-parser"
description = "Parser for the Rholang language based on the tree-sitter grammar."
version = "0.1.0"
edition = "2024"

[lib]
name = "rholang_parser"
crate-type = ["cdylib", "rlib"]

[dependencies]
rholang-tree-sitter = { path = "../rholang-tree-sitter" }
smallvec = { workspace = true }
