[package]
name = "rholang-parser"
description = "Parser for the Rholang language based on the tree-sitter grammar."
version = "0.1.0"
edition = "2024"

[lib]
name = "rholang_parser"
crate-type = ["cdylib", "rlib"]

[dependencies]
bitvec = { workspace = true }
nonempty-collections = "1.0.0"
rholang-tree-sitter = { path = "../rholang-tree-sitter" }
rholang-tree-sitter-proc-macro = { path = "../rholang-tree-sitter-proc-macro/" }
smallvec = { workspace = true }
tree-sitter = { workspace = true }
typed-arena = "2.0.2"
validated = { workspace = true }

