[package]
name = "rholang-tree-sitter-proc-macro"
version = "0.1.0"
edition = "2021"
description = "Proc macros for compile-time access to rholang-tree-sitter node kinds, keywords, and fields"
license = "MIT"
repository = "https://github.com/f1r3fly/rholang"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rholang-tree-sitter = { path = "../rholang-tree-sitter" }
quote = { workspace = true }
syn = { workspace = true }
tree-sitter = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
is-terminal = { workspace = true }

[features]
proc_macros = []
default = ["proc_macros"]

[lib]
proc-macro = true

[[example]]
name = "parse_rholang"
path = "examples/parse_rholang.rs"
required-features = ["proc_macros"]

[[example]]
name = "advanced_usage"
path = "examples/advanced_usage.rs"
required-features = ["proc_macros"]

[[example]]
name = "match_node_example"
path = "examples/match_node_example.rs"
required-features = ["proc_macros"]
