[package]
name = "rholang-tree-sitter"
description = "Rholang grammar for tree-sitter"
version = "0.1.0"
edition = "2021"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.5"

[dev-dependencies]
tree-sitter = "0.25.6"

[build-dependencies]
cc = "1.2.26"
