[package]
name = "rholang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { workspace = true }
models = { workspace = true }
shared = { workspace = true }
rspace_plus_plus = { workspace = true }

tree-sitter-rholang.workspace = true
itertools.workspace = true
serde.workspace = true
tokio.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
cc.workspace = true
hex.workspace = true
prost.workspace = true
zbase32.workspace = true
lazy_static.workspace = true
futures.workspace = true
bincode.workspace = true
regex.workspace = true
rand.workspace = true

[build-dependencies]
cc.workspace = true
