[package]
name = "shell"
version = "0.1.0"
edition = "2024"

# Add lib configuration to expose crate modules to tests
[lib]
name = "shell"
path = "src/lib.rs"

[[bin]]
name = "rhosh"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
rustyline =  { workspace = true }
rustyline-async = { workspace = true }
clap = { workspace = true }


[dev-dependencies]
rstest = { workspace = true }
async-std = { workspace = true }



