[package]
name = "shell"
version = "0.1.0"
edition = "2021"

# Add lib configuration to expose crate modules to tests
[lib]
name = "shell"
path = "src/lib.rs"

[[bin]]
name = "rhosh"
path = "src/main.rs"

[features]
with-file-history = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
rustyline-async = { workspace = true }
clap = { workspace = true }


[dev-dependencies]
rstest = { workspace = true }
async-std = { workspace = true }



