[package]
name = "tree-sitter-rholang"
description = "Rholang grammar for tree-sitter"
version = "0.0.1"
license = "MIT"
#readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "rholang"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-rholang"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = { workspace = true}

[dev-dependencies]
tree-sitter = { workspace = true }

[build-dependencies]
cc = { workspace = true }
